Add Google Analytics tracking ID

--- a/themes/avicenna/layouts/partials/header.html
+++ b/themes/avicenna/layouts/partials/header.html
@@ -35,4 +35,5 @@
 	<script src="js/feather.min.js"></script>
 	{{- end -}}
 	<script src="js/main.js"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159974102-1"></script>
 </head>
