--- a/themes/avicenna/layouts/partials/footer.html
+++ b/themes/avicenna/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="footer wrapper">
 	<nav class="nav">
 		<!-- <div><a href="https://github.com/hadisinaee/avicenna">Avicenna Theme</a> | Built with <a href="https://gohugo.io">Hugo</a></div> -->
-		<img src={{ "Rosa.jpg" | absURL }} class="profile_image">
+		<!-- <img src={{ "Rosa.jpg" | absURL }} class="profile_image"> -->
 	</nav>
 </div>
 
