--- a/themes/avicenna/layouts/index.html
+++ b/themes/avicenna/layouts/index.html
@@ -6,6 +6,7 @@
 		<div class="container wrapper">
 			{{ partial "head.html" . }}
 			{{ partial "introduction.html" . }}
+			{{ partial "wps.html" . }}
 			{{ partial "wips.html" . }}
 			{{ partial "projects.html" . }}
 			{{ partial "publications.html" . }}
